--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h3 {
     .card {
         max-width: 700px;
         display: grid;
-        grid-template-columns: repeat(1fr, 2);
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .card .card__info {
